@@ -1,3 +1,13 @@
+Thu Apr 25 18:42:02 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/ImplRepo_Service/Forwarder.cpp:
+        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
+
+        * tao/IORTable/Async_Table_Adapter.cpp:
+        * tao/IORTable/Locate_ResponseHandler.cpp:
+
+          Scoreboard cleanup.
+
 Wed Apr 24 14:45:54 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * orbsvcs/ImplRepo_Service/tao_imr_i.h:
